src/test/ui/asm/aarch64/type-check-2-2.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/type-check-2-2.rs:19:28
   |
LL |         let x: u64;
   |             - binding declared here but left uninitialized
LL |         asm!("{}", in(reg) x);
   |                            ^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |         let x: u64 = 0;
   |                    +++

error[E0381]: used binding `y` isn't initialized
  --> $DIR/type-check-2-2.rs:22:9
   |
LL |         let mut y: u64;
   |             ----- binding declared here but left uninitialized
LL |         asm!("{}", inout(reg) y);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ `y` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |         let mut y: u64 = 0;
   |                        +++

error[E0596]: cannot borrow `v` as mutable, as it is not declared as mutable
  --> $DIR/type-check-2-2.rs:30:29
   |
LL |         let v: Vec<u64> = vec![0, 1, 2];
   |             - help: consider changing this to be mutable: `mut v`
LL |         asm!("{}", in(reg) v[0]);
LL |         asm!("{}", out(reg) v[0]);
   |                             ^ cannot borrow as mutable

error[E0596]: cannot borrow `v` as mutable, as it is not declared as mutable
  --> $DIR/type-check-2-2.rs:32:31
   |
LL |         let v: Vec<u64> = vec![0, 1, 2];
   |             - help: consider changing this to be mutable: `mut v`
...
LL |         asm!("{}", inout(reg) v[0]);
   |                               ^ cannot borrow as mutable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0381, E0596.
For more information about an error, try `rustc --explain E0381`.
